# p99-login-proxy

./: .gitignore  P99LoginProxy.spec  README.md  README_LINUX.md  build_bootloader.py  connection.py  create_tray_icon.py  middleman.py  p99loginproxy.py  package_with_pyinstaller.bat  proxyconfig.ini.example  pyproject.toml  requirements.txt  run_server.py  setup.cfg  tox.ini  version_info.py
.cursor/rules/: packet-parse-protected.mdc
.github/workflows/: build.yml  release.yml
eqemu_sso_login_proxy/: config.py  eq_config.py  eq_ui.py  sequence.py  server.py  sso_api.py  structs.py  ui.py  updater.py
old/: connection.py  main.py  protocol.py  sequence.py
p99_sso_login_proxy/: __init__.py  class_translate.py  cmd.py  config.py  count_display.py  eq_config.py  inventory_parser.py  local_characters.py  log_handler.py  login_protocol.py  readiness_by_class.py  sequence.py  server.py  session.py  soe_protocol.py  sso_api.py  structs.py  theme.py  ui.py  update_scheduler.py  updater.py  utils.py  ws_client.py  zone_translate.py
p99_sso_login_proxy/ui_classes/: local_account_dialog.py  local_character_dialog.py  password_visibility.py  proxy_stats.py  taskbar_icon.py
tests/: conftest.py  test_class_translate.py  test_count_display.py  test_eq_config_eqhost.py  test_inventory_parser.py  test_local_characters.py  test_log_patterns.py  test_readiness_by_class.py  test_sso_retry.py  test_utils_local_characters_csv.py  test_velium_vapors_log.py  test_zone_translate.py
website/: README.md  index.html
website/css/: styles.css
website/js/: main.js
