[metadata]
name = P99LoginProxy
author = Adam Harwell
summary = Proxy for EQ P99 SSO authentication
description_file =
    README.md
requires_python = >=3.9
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: Windows
    Programming Language :: Python

[files]
packages =
    p99_sso_login_proxy
data_files =
    data = tray_icon*
    conf = proxyconfig.ini

[entry_points]
console_scripts =
    p99loginproxy = run_server:main